--- a/index.html
+++ b/index.html
@@ -7,18 +7,34 @@
     <title>Genshin Impact</title>
     <link rel="stylesheet" href="assets/css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo">Genshin Impact</a>
-        <nav>
-            <ul>
-                <li><a href="./pages/personajes.html">Personajes</a></li>
-                <li><a href="./pages/armas.html">Armas</a></li>
-                <li><a href="./pages/materiales.html">Materiales</a></li>
-                <li><a href="./pages/galeria.html">Gallery</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid ">
+              <a class="navbar-brand" href="index.html">Genshin Impact</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="pages/personajes.html">Personajes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="pages/armas.html">Armas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="pages/materiales.html">Materiales</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="pages/galeria.html">Gallery</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <section>
