--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -6,18 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genshin Impact</title>
     <link rel="stylesheet" href="../assets/css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <a href="/index.html" class="logo">Genshin Impact</a>
-        <nav>
-            <ul>
-                <li><a href="personajes.html">Personajes</a></li>
-                <li><a href="armas.html">Armas</a></li>
-                <li><a href="materiales.html">Herramientas</a></li>
-                <li><a href="galeria.html">Gallery</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid ">
+              <a class="navbar-brand" href="/index.html">Genshin Impact</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="personajes.html">Personajes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="armas.html">Armas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="materiales.html">Materiales</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="galeria.html">Gallery</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <section class="cardsPersonajes">
         <div class="cardPersonaje">
