--- a/index.html
+++ b/index.html
@@ -1,68 +1,94 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshin Impact</title>
-    <link rel="stylesheet" href="assets/css/estilos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid ">
-              <a class="navbar-brand" href="index.html">Genshin Impact</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="pages/personajes.html">Personajes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="pages/armas.html">Armas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="pages/materiales.html">Materiales</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="pages/galeria.html">Gallery</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
 
-    <section>
-        <div class="container-hero">
-            <h1 class="title-hero">Historia</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Repellat aut alias voluptate, adipisci non quidem nisi vel, in quos, repudiandae fugiat excepturi qui rerum quam esse cumque. <br> Aspernatur, soluta odit.</p>
-        </div>
-        <div class="container">
-            <h4 class="title">Genshin Impact</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Porro doloremque suscipit itaque culpa ipsum libero vero quaerat distinctio dignissimos quod,<br> ab obcaecati excepturi facere aliquid minus accusamus tempore laudantium quasi?</p>
-            <img src="assets/imagenes/genshin_05_4K.jpg">
-        </div>
-    </section>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Genshin Impact</title>
+  <link rel="stylesheet" href="assets/css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+  <header>
+    <nav>
+      <input type="checkbox" id="ckbox">
+      <label for="ckbox" class="drawer">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </label>
+      <h1>
+        Genshin Impact
+      </h1>
+      <ul class="menu-box">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pages/personajes.html">Personajes</a></li>
+        <li><a href="pages/armas.html">Armas</a></li>
+        <li><a href="pages/materiales.html">Materiales</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section>
+    <div class="container-hero">
+      <h1 class="title-hero">Historia</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Repellat aut alias voluptate, adipisci non
+        quidem nisi vel, in quos, repudiandae fugiat excepturi qui rerum quam esse cumque. <br> Aspernatur, soluta odit.
+      </p>
+    </div>
+    <div class="card mb-3">
+      <img src="./assets/imagenes/genshin.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.</p>
+
+      </div>
+    </div>
+    <div class="card-home">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.</p>
+      </div>
+      <img src="./assets/imagenes/genshin....jpg" class="card-img-bottom" alt="...">
+      <img src="./assets/imagenes/genshin.......png" class="card-img-bottom" alt="...">
+    </div>
+  </section>
 </body>
+
+
 <footer>
-    <section class="footer">
-        <h3>Nosotros</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> 
-            Doloremque, quisquam nam eaque consequuntur <br> 
-            distinctio dolorem.</p>
-        <ul>
-            <li><a href="./pages/eventos.html">Eventos</a></li>
-            <li><a href="./pages/contacto.html">Ayuda</a></li>
-            <li><a href="#">Página Oficial</a></li>
-        </ul>
-    </section>
-    <section class="copy">
-        &copy;Genshin Impact
-    </section>
+  <div class="container-fluid-footer ">
+      <div class="mt-3 ">
+          <h3 class="text-center fw-bold">¿Quienes somos?</h3>
+          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit ,<br>
+              Quos facilis sunt, ipsa dolor aliquam accusamus sint facere repudiandae?</p>
+          <hr>
+      </div>
+
+      <div class="row justify-content-around text-center text-md-start">
+          <div class="col-md-2 text-center">
+              <h1 class="fw-bold mt-3 ">Genshin<br>Impact</h1>
+          </div>
+          <div class="col-md-2">
+              <ul class="list-unstyled">
+                  <li class="fw-bold my-2">¡Explora!</li>
+                  <li> <a href="pages/eventos.html" class="text-decoration-none text-white">Próximos Eventos</a> </li>
+                  <li> <a href="pages/contacto.html" class="text-decoration-none text-white">Contáctanos</a> </li>
+                  <li> <a href="#" class="text-decoration-none text-white">Página Oficial</a> </li>
+              </ul>
+          </div>
+      </div>
+      <hr>
+      <div class="row-copy">
+          <div class="col-md-12 text-center pt-2">
+              <p>&copy; 2022 Copyright <a href="index.html" class="text-white">Genshin Impact</a></p>
+          </div>
+      </div>
+  </div>
 </footer>
+
 </html>
