--- a/pages/materiales.html
+++ b/pages/materiales.html
@@ -1,94 +1,186 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genshin Impact</title>
-    <link rel="stylesheet" href="/assets/css/estilos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid ">
-              <a class="navbar-brand" href="/index.html">Genshin Impact</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="personajes.html">Personajes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="armas.html">Armas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="materiales.html">Materiales</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="galeria.html">Gallery</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+        <nav>
+            <input type="checkbox" id="ckbox">
+            <label for="ckbox" class="drawer">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </label>
+            <h1>
+                Genshin Impact
+            </h1>
+            <ul class="menu-box">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="personajes.html">Personajes</a></li>
+                <li><a href="armas.html">Armas</a></li>
+                <li><a href="materiales.html">Materiales</a></li>
+            </ul>
+        </nav>
     </header>
 
-    
-    
-    <section class="cardsMateriales">
-        <div class="cardMateriales">
-            <h4>Margarita voladora</h4>
-            <img src="../assets/imagenes/Margarita voladora.jpg" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
-                Quis voluptas aut odit quidem deleniti eum dolorum cupiditate voluptatibus nobis sed repudiandae, quibusdam error quasi saepe enim nemo illo minus neque.</p>
-        </div>
 
-        <div class="cardMateriales">
-            <h4>Semilla de huracán</h4>
-            <img src="../assets/imagenes/Semilla de huracán" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
-                Quis voluptas aut odit quidem deleniti eum dolorum cupiditate voluptatibus nobis sed repudiandae, quibusdam error quasi saepe enim nemo illo minus neque.</p>
+    <section>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                    </a>
+                    <h2>Núcleo de escarcha</h2>
+                    <h4>Núcleo de escarcha</h4>
+                </div>
+                <div class="historia">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
+                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
+                        aspernatur iste praesentium deleniti provident iure?</p>
+                </div>
+            </div>
         </div>
-
-        <div class="cardMateriales">
-            <h4>Pilar de basalto</h4>
-            <img src="../assets/imagenes/Pilar de basalto" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
-                Quis voluptas aut odit quidem deleniti eum dolorum cupiditate voluptatibus nobis sed repudiandae, quibusdam error quasi saepe enim nemo illo minus neque.</p>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                    </a>
+                    <h2>Núcleo de escarcha</h2>
+                    <h4>Núcleo de escarcha</h4>
+                </div>
+                <div class="historia">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
+                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
+                        aspernatur iste praesentium deleniti provident iure?</p>
+                </div>
+            </div>
         </div>
-
-        <div class="cardMateriales">
-            <h4>Abalorio de la tempestad</h4>
-            <img src="../assets/imagenes/Abalorio de la tempestad.jpg" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
-                Quis voluptas aut odit quidem deleniti eum dolorum cupiditate voluptatibus nobis sed repudiandae, quibusdam error quasi saepe enim nemo illo minus neque.</p>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                    </a>
+                    <h2>Núcleo de escarcha</h2>
+                    <h4>Núcleo de escarcha</h4>
+                </div>
+                <div class="historia">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
+                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
+                        aspernatur iste praesentium deleniti provident iure?</p>
+                </div>
+            </div>
         </div>
-
-        <div class="cardMateriales">
-            <h4>Trepadora supresora</h4>
-            <img src="../assets/imagenes/trepadora supresora" alt="">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
-                Quis voluptas aut odit quidem deleniti eum dolorum cupiditate voluptatibus nobis sed repudiandae, quibusdam error quasi saepe enim nemo illo minus neque.</p>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                    </a>
+                    <h2>Núcleo de escarcha</h2>
+                    <h4>Núcleo de escarcha</h4>
+                </div>
+                <div class="historia">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
+                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
+                        aspernatur iste praesentium deleniti provident iure?</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                    </a>
+                    <h2>Núcleo de escarcha</h2>
+                    <h4>Núcleo de escarcha</h4>
+                </div>
+                <div class="historia">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
+                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
+                        aspernatur iste praesentium deleniti provident iure?</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                    </a>
+                    <h2>Núcleo de escarcha</h2>
+                    <h4>Núcleo de escarcha</h4>
+                </div>
+                <div class="historia">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
+                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
+                        aspernatur iste praesentium deleniti provident iure?</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                    </a>
+                    <h2>Núcleo de escarcha</h2>
+                    <h4>Núcleo de escarcha</h4>
+                </div>
+                <div class="historia">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
+                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
+                        aspernatur iste praesentium deleniti provident iure?</p>
+                </div>
+            </div>
         </div>
 
     </section>
 
 </body>
 <footer>
-    <section class="footer">
-        <h3>Nosotros</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> 
-            Doloremque, quisquam nam eaque consequuntur magni distinctio dolorem.</p>
-        <ul>
-            <li><a href="eventos.html">eventos</a></li>
-            <li><a href="contacto.html">Ayuda</a></li>
-            <li><a href="#">Página Oficial</a></li>
-        </ul>
-    </section>
-    &copy;Genshin Impact
+    <div class="container-fluid-footer ">
+        <div class="mt-3 ">
+            <h3 class="text-center fw-bold">¿Quienes somos?</h3>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit ,<br>
+                Quos facilis sunt, ipsa dolor aliquam accusamus sint facere repudiandae?</p>
+            <hr>
+        </div>
+
+        <div class="row justify-content-around text-center text-md-start">
+            <div class="col-md-2 text-center">
+                <h1 class="fw-bold mt-3 ">Genshin<br>Impact</h1>
+            </div>
+            <div class="col-md-2">
+                <ul class="list-unstyled">
+                    <li class="fw-bold my-2">¡Explora!</li>
+                    <li> <a href="eventos.html" class="text-decoration-none text-white">Eventos</a> </li>
+                    <li> <a href="contacto.html" class="text-decoration-none text-white">Ayuda</a> </li>
+                    <li> <a href="#" class="text-decoration-none text-white">Página Oficial</a> </li>
+
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="row-copy">
+            <div class="col-md-12 text-center pt-2">
+                <p>&copy; 2022 Copyright <a href="/index.html" class="text-white">Genshin Impact</a></p>
+            </div>
+        </div>
+    </div>
 </footer>
+
 </html>
+
 </html>
