--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="pages/personajes.html">Personajes</a></li>
         <li><a href="pages/armas.html">Armas</a></li>
         <li><a href="pages/materiales.html">Materiales</a></li>
+        <li><a href="pages/galeria.html">Gallery</a></li>
       </ul>
     </nav>
   </header>
