--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -27,13 +27,14 @@
             <li><a href="personajes.html">Personajes</a></li>
             <li><a href="armas.html">Armas</a></li>
             <li><a href="materiales.html">Materiales</a></li>
+            <li><a href="galeria.html">Gallery</a></li>
           </ul>
         </nav>
       </header>
         
 
-    <h1 class="gallery-gallery">
-        Galeria
+    <h1 class="gallery-gallery text-center">
+        GALERÍA
     </h1>
 
     <div class="gallery-container">
@@ -50,11 +51,11 @@
             <h2 class="gallery-title">Imagen</h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/genshin_12_4K.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/genshin-impact-2.1.jpg" alt="" class="gallery__img">
             <h2 class="gallery-title">Imagen</h2>
         </div>
         <div class="gallery-item">
-            <img src="../assets/imagenes/galeria.jpg" alt="" class="gallery__img">
+            <img src="../assets/imagenes/Noelle-Genshin Impact.jpg" alt="" class="gallery__img">
             <h2 class="gallery-title">Imagen</h2>
         </div>
         <div class="gallery-item">
