--- a/pages/materiales.html
+++ b/pages/materiales.html
@@ -27,6 +27,7 @@
                 <li><a href="personajes.html">Personajes</a></li>
                 <li><a href="armas.html">Armas</a></li>
                 <li><a href="materiales.html">Materiales</a></li>
+                <li><a href="galeria.html">Gallery</a></li>
             </ul>
         </nav>
     </header>
