Tercera entrega del proyecto final

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -5,23 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshin Impact</title>
-    <link rel="stylesheet" href="../assets/css/estilos.css">
+    <title>Genshin Impact | Fan Page</title>
+    <meta name="description"
+        content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Genshin Impact | Fan Page">
+    <meta property="og:description"
+        content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+
+    <!--CSS COMPILADO / SASS-->
+    <link rel="stylesheet" href="../assets/css/style.css">
+
+    <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+    <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+<!--Inicia el Body-->
+
 <body>
     <header>
+        <!--Nav-->
         <nav>
             <input type="checkbox" id="ckbox">
             <label for="ckbox" class="drawer">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </label>
-            <h1>
-                Genshin Impact
-            </h1>
+
+            <!--Logo-->
+            <a href="#"><img src="../assets/imagenes/logo.png"></a>
+
             <ul class="menu-box">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
@@ -32,20 +49,23 @@
         </nav>
     </header>
 
+    <!--Inician las Cards-->
     <section>
         <div class="container-card">
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/aether y lumine.jpg" alt="">
                     </a>
                     <h2>Aether y Lumine</h2>
                     <h4>Viajeros</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>El Viajero o la Viajera es el personaje que protagoniza Genshin Impact, y un personaje jugable.
+                        Al comienzo del juego, ambos son hermanos mellizos de otro mundo que viajan por todo el
+                        universo, hasta que una Diosa desconocida los atacó, atrapando a uno de ellos y sellando su
+                        manera de viajar para dejarlos varados en Teyvat. Está acompañado por una compañera de viaje
+                        llamada Paimon durante todo su viaje.</p>
                 </div>
             </div>
         </div>
@@ -53,15 +73,14 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/venti.jpg" alt="">
                     </a>
-                    <h2>Aether y Lumine</h2>
-                    <h4>Viajeros</h4>
+                    <h2>Venti</h2>
+                    <h4>Arconte Anemo</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Es un bardo de espíritu libre y amante del vino en Mondstadt y el actual recipiente mortal de
+                        Barbatos, el Arconte Anemo.</p>
                 </div>
             </div>
         </div>
@@ -69,15 +88,16 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/zhongli.webp" alt="">
                     </a>
-                    <h2>Aether y Lumine</h2>
-                    <h4>Viajeros</h4>
+                    <h2>Zhongli</h2>
+                    <h4>Arconte Geo</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Es el consultor de la Funeraria El Camino. Más tarde se revela que es el recipiente actual de
+                        Morax, el Arconte Geo, que ha decidido experimentar el mundo desde la perspectiva de un mortal.
+                        Después de renunciar a su Gnosis, se retira de su posición como Arconte y regresa a su antigua
+                        identidad como Adeptus, aunque todavía bajo el disfraz de ser humano.</p>
                 </div>
             </div>
         </div>
@@ -85,15 +105,17 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/shogun raiden.jpg" alt="">
                     </a>
-                    <h2>Aether y Lumine</h2>
-                    <h4>Viajeros</h4>
+                    <h2>Shogun raiden</h2>
+                    <h4>Soberana del reino eterno</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>La Shogun Raiden (en japonés: 雷電 将軍 Raiden Shougun), cuyo nombre real es Ei, es un personaje
+                        jugable en Genshin Impact.
+
+                        Ella controla una marioneta mientras medita dentro del Plano de la eutimia. Ella es el
+                        recipiente mortal de Beelzebul, la actual Arconte Electro de Inazuma.</p>
                 </div>
             </div>
         </div>
@@ -101,15 +123,15 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/nahida.jpg" alt="">
                     </a>
-                    <h2>Aether y Lumine</h2>
-                    <h4>Viajeros</h4>
+                    <h2>Nahida</h2>
+                    <h4>Reina Menor Kusanali</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Ella es el recipiente de la Reina Menor Kusanali, la actual Arconte Dendro. Habiendo sido
+                        liberada de su extenso confinamiento en el Santuario Surasthana, ahora se esfuerza por tener una
+                        presencia más fuerte en Sumeru.</p>
                 </div>
             </div>
         </div>
@@ -117,15 +139,16 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/kaeya.jpg" alt="">
                     </a>
-                    <h2>Aether y Lumine</h2>
-                    <h4>Viajeros</h4>
+                    <h2>Kaeya</h2>
+                    <h4>Capitán de Caballería</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Kaeya es el Capitán de Caballería de los Caballeros de Favonius. La gente de Mondstadt lo tiene
+                        en alta estima, incluso con todas sus excentricidades y secretos.
+
+                    </p>
                 </div>
             </div>
         </div>
@@ -133,15 +156,15 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/dainsleif.jpg" alt="">
                     </a>
-                    <h2>Aether y Lumine</h2>
-                    <h4>Viajeros</h4>
+                    <h2>Dainsleif</h2>
+                    <h4>Espadachín del Crepúsculo</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Dainsleif es un hombre misterioso que vino de la tierra de Khaenri’ah y tiene varios cientos de
+                        años (al menos alrededor de 500). En la corriente, Dansleif fue referido como un "Buscador de la
+                        Verdad", es decir, buscador de la verdad. Su arma o elemento aún no ha sido revelado.</p>
                 </div>
             </div>
         </div>
@@ -149,15 +172,15 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/tartaglia" alt="">
                     </a>
-                    <h2>Aether y Lumine</h2>
-                    <h4>Viajeros</h4>
+                    <h2>Tartaglia</h2>
+                    <h4>El Undécimo Heraldo de los Fatui</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Es el undécimo de los Once Heraldos de los Fatui. Siguiendo el peligro donde quiera que vaya,
+                        Tartaglia siempre está y ansioso por un desafío, lo que lo hace extremadamente peligroso a pesar
+                        de ser el miembro más joven.</p>
                 </div>
             </div>
         </div>
@@ -165,15 +188,15 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/teucer" alt="">
                     </a>
-                    <h2>Aether y Lumine</h2>
-                    <h4>Viajeros</h4>
+                    <h2>Teucer</h2>
+                    <h4>hermano menor de tartaglia</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>es un niño de Snezhnaya que se ha escapado a Liyue para encontrar a su amado hermano mayor,
+                        Tartaglia. Es el menor de sus hermanos y, como resultado, se mantiene en la oscuridad sobre el
+                        estado de Tartaglia como Heraldo. Es hermano de Tonia y Anthon</p>
                 </div>
             </div>
         </div>
@@ -181,20 +204,92 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether lumine.jpg" alt="">
+                        <img src="../assets/imagenes/jean.jpg" alt="">
                     </a>
-                    <h2>Aether y Lumine</h2>
-                    <h4>Viajeros</h4>
+                    <h2>Jean</h2>
+                    <h4>Caballeros de Favonius</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Hija de Frederica Gunnhildr y Seamus Pegg, la hermana mayor de Bárbara y descendiente del
+                        prestigioso Clan Gunnhildr, Jean es la Gran Maestra Intendente de los Caballeros de Favonius.
+                        Ella siempre está ocupada manejando los disturbios en Mondstadt y, por supuesto, trabajando
+                        incansablemente para mantener la Ciudad de la Libertad</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-personaje">
+                    <a href="#">
+                        <img src="../assets/imagenes/xiao" alt="">
+                    </a>
+                    <h2>Xiao</h2>
+                    <h4>El Guardián Yaksha</h4>
+                </div>
+                <div class="historia">
+                    <p>Es un Adeptus, bajo el nombre de Alatus (Del latín Alatus, -i: Alado), y el único miembro
+                        restante conocido de los cinco principales Yakshas enviados por Morax para someter a los
+                        espíritus demoníacos que plagaban Liyue. Actualmente reside en Posada Wangshu y en su mayoría se
+                        aísla de las multitudes y de las interacciones humanas.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-personaje">
+                    <a href="#">
+                        <img src="../assets/imagenes/yae miko" alt="">
+                    </a>
+                    <h2>Yae miko</h2>
+                    <h4>Suma Sacerdotisa</h4>
+                </div>
+                <div class="historia">
+                    <p>La Suma Sacerdotisa del Gran Santuario Narukami y editora en jefe de la Editorial Yae. Bajo su
+                        increíble encanto esconde una inteligencia y una astucia inimaginables.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-personaje">
+                    <a href="#">
+                        <img src="../assets/imagenes/nilou.jpg" alt="">
+                    </a>
+                    <h2>Nilou</h2>
+                    <h4>Estrella del Teatro Zubayr</h4>
+                </div>
+                <div class="historia">
+                    <p>La famosa bailarina del Teatro Zubayr. Su estilo de danza es elegante y agraciado, y posee un
+                        carácter puro y bondadoso.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-personaje">
+                    <a href="#">
+                        <img src="../assets/imagenes/diluc.jpg" alt="">
+                    </a>
+                    <h2>Diluc</h2>
+                    <h4>El Amanecer Oscuro</h4>
+                </div>
+                <div class="historia">
+                    <p>Nacido en el acomodado Clan Ragnvindr, es el actual propietario del Viñedo del Amanecer y un
+                        noble de gran estima en la sociedad de Mondstadt. Si bien un incidente pasado hizo que se
+                        separara de los Caballeros de Favonius, continúa protegiendo Mondstadt a su manera como el
+                        rumoreado "Héroe Oscuro".</p>
                 </div>
             </div>
         </div>
     </section>
 </body>
+
+
+<!--TERMINAN LAS CARDS-->
+
+<!--FOOTER-->
+
+
 <footer>
     <div class="container-fluid-footer ">
         <div class="mt-3 ">
@@ -227,6 +322,6 @@
     </div>
 </footer>
 
-</html>
+<!--Termina el footer-->
 
 </html>
