--- a/index.html
+++ b/index.html
@@ -5,23 +5,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Genshin Impact</title>
-  <link rel="stylesheet" href="assets/css/estilos.css">
+  <title>Genshin Impact | Fan Page</title>
+  <meta name="description" content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+  <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+  <meta property="og:type" content="Web site">
+  <meta property="og:title" content="Genshin Impact | Fan Page">
+  <meta property="og:description" content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact."> 
+
+<!--CSS COMPILADO / SASS -->
+  <link rel="stylesheet" href="assets/css/style.css">
+
+<!--Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+<!--Inicia el body-->
 <body>
   <header>
+    <!--Inicia el nav-->
     <nav>
       <input type="checkbox" id="ckbox">
       <label for="ckbox" class="drawer">
         <i class="fa fa-bars" aria-hidden="true"></i>
       </label>
-      <h1>
-        Genshin Impact
-      </h1>
+
+      <a href="#"><img src="./assets/imagenes/logo.png"></a>
+      
       <ul class="menu-box">
         <li><a href="index.html">Home</a></li>
         <li><a href="pages/personajes.html">Personajes</a></li>
@@ -32,35 +45,42 @@
     </nav>
   </header>
 
+<!--Inicia la card inicial-->
   <section>
     <div class="container-hero">
-      <h1 class="title-hero">Historia</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Repellat aut alias voluptate, adipisci non
-        quidem nisi vel, in quos, repudiandae fugiat excepturi qui rerum quam esse cumque. <br> Aspernatur, soluta odit.
+      <h1 class="title-hero">Genshin Impact</h1>
+      <p>¡Bievenido a Genshin Impact! Somos una fandom que reune toda la información disponible sobre los personajes, habilidades, localizaciones, misiones y mucho más acerda de nuestro juego favorito. <br>
+        Genshin Impact es un juego de rol de acción de mundo abierto desarrollado y publicado por miHoYo para plataformas PC, iOS / Android y PS4. El juego es Free-to-Play con un sistema de monetización interna, conocida dentro del juego como Gachapón.
       </p>
     </div>
+    <!--Inician las cards secundarias-->
     <div class="card mb-3">
       <img src="./assets/imagenes/genshin.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
+        <h5 class="card-title pt-5 text-center">Historia</h5>
+        <p class="card-text pb-5 text-center">Nos presentan a Éter y Lumina, dos hermanos mellizos que viajaban entre varios mundos durante años, en uno de sus tantos viajes, los hermanos terminaron llegando a Teyvat. <br> Un mundo que estaba en guerra, al percatarse de eso intentaron marcharse de ahí, pero una misteriosa diosa les alcanza.</p>
 
       </div>
     </div>
-    <div class="card-home">
+    <div class="card mb-3">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
+        <h5 class="card-title pt-5 text-center">Un Mundo por descubrir</h5>
+        <p class="card-text pb-5 text-center">Un juego épico de aventura y fantasía...<br>
+          ¡Experimenta una aventura inmersiva para un jugador! <br>
+          Como viajero de otro mundo, comenzarás una travesía para reunirte con tu familiar perdido y encontrarte a ti mismo.
+          <br>
+          <br>
+          Surca el vasto cielo de este mundo, nada a través de lagos y mares, y escala montañas imponentes. <br>
+          Explora más allá de los caminos transitados y descubre los muchos secretos ocultos en este mundo lleno de maravillas.</p>
       </div>
       <img src="./assets/imagenes/genshin....jpg" class="card-img-bottom" alt="...">
       <img src="./assets/imagenes/genshin.......png" class="card-img-bottom" alt="...">
     </div>
   </section>
+  <!--terminan las cards-->
 </body>
-
-
+<!--TERMINA el body-->
+<!--Inicia el FOOTER-->
 <footer>
   <div class="container-fluid-footer ">
       <div class="mt-3 ">
@@ -91,5 +111,5 @@
       </div>
   </div>
 </footer>
-
+<!--TERMINA el FOOTER-->
 </html>
