--- a/pages/armas.html
+++ b/pages/armas.html
@@ -5,24 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshin Impact</title>
-    <link rel="stylesheet" href="../assets/css/estilos.css">
+    <title>Genshin Impact | Fan Page</title>
+    <meta name="description"
+        content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Genshin Impact | Fan Page">
+    <meta property="og:description"
+        content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+
+    <!--CSS COMPILADO / SASS-->
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!--FONT AWESOME-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
+<!--Inicia el body-->
 
 <body>
 
     <header>
+        <!--Inicia el NAV-->
         <nav>
             <input type="checkbox" id="ckbox">
             <label for="ckbox" class="drawer">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </label>
-            <h1>
-                Genshin Impact
-            </h1>
+            <a href="#"><img src="../assets/imagenes/logo.png"></a>
             <ul class="menu-box">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
@@ -33,20 +45,20 @@
         </nav>
     </header>
 
+    <!--INICIAN LAS CARDS-->
     <section>
         <div class="container-card">
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/alas celestiales.jpg" alt="">
+                        <img src="../assets/imagenes/deseo ponzoñoso 1.webp" alt="">
                     </a>
-                    <h2>Alas Celestiales</h2>
-                    <h4>Alas Celestiales</h4>
+                    <h2>Deseo Ponzoñoso</h2>
+                    <h4>Espada</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p> Una espada muy recta y misteriosa que parece sedienta de vida. De ella gotea un veneno capaz de
+                        corromper hasta a un dragón</p>
                 </div>
             </div>
         </div>
@@ -54,15 +66,15 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/alas celestiales.jpg" alt="">
+                        <img src="../assets/imagenes/alas celestiales 1.webp" alt="">
                     </a>
                     <h2>Alas Celestiales</h2>
-                    <h4>Alas Celestiales</h4>
+                    <h4>Arco</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p> Un gran arco que simboliza el vínculo entre Stormterror y Barbatos. El sonido del disparo del
+                        arco es música para los oídos del Dios del Viento. Contiene el poder del cielo y del viento en
+                        su interior.</p>
                 </div>
             </div>
         </div>
@@ -70,15 +82,14 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/alas celestiales.jpg" alt="">
+                        <img src="../assets/imagenes/lanza perforanubes 3.webp" alt="">
                     </a>
-                    <h2>Alas Celestiales</h2>
-                    <h4>Alas Celestiales</h4>
+                    <h2>Lanza perforanubes</h2>
+                    <h4>Lanza</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p> Una afilada lanza que puede atravesar cualquier cosa. Al blandirla, casi se pueden ver las
+                        grietas creadas por su punta en el aire</p>
                 </div>
             </div>
         </div>
@@ -86,15 +97,14 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/alas celestiales.jpg" alt="">
+                        <img src="../assets/imagenes/luz del cegador 1.webp" alt="">
                     </a>
-                    <h2>Alas Celestiales</h2>
-                    <h4>Alas Celestiales</h4>
+                    <h2>Luz del cegador</h2>
+                    <h4>Lanza</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Una naginata que se usa para cortar hierba. Cualquier ejército que se enfrente a esta arma
+                        también se verá arrancado del suelo</p>
                 </div>
             </div>
         </div>
@@ -102,15 +112,14 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/alas celestiales.jpg" alt="">
+                        <img src="../assets/imagenes/mil sueños flotantes 1.jpg" alt="">
                     </a>
-                    <h2>Alas Celestiales</h2>
-                    <h4>Alas Celestiales</h4>
+                    <h2>Mil sueños flotantes</h2>
+                    <h4>Catalizador</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>"Una lámpara que ilumina los sueños de mil noches. De su resplandor esmeralda emana una canción
+                        de antaño</p>
                 </div>
             </div>
         </div>
@@ -118,15 +127,14 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/alas celestiales.jpg" alt="">
+                        <img src="../assets/imagenes/rugido del leon.webp" alt="">
                     </a>
-                    <h2>Alas Celestiales</h2>
-                    <h4>Alas Celestiales</h4>
+                    <h2>Rugido del leon</h2>
+                    <h4>Espada</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Una afilada espada con una lujosa decoración que no compromete ni su resistencia ni su filo. El
+                        sonido de la misma cortando el aire es como el rugido de un león. »</p>
                 </div>
             </div>
         </div>
@@ -134,15 +142,13 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/alas celestiales.jpg" alt="">
+                        <img src="../assets/imagenes/estrella invernal 1.webp" alt="">
                     </a>
-                    <h2>Alas Celestiales</h2>
-                    <h4>Alas Celestiales</h4>
+                    <h2>Estrella invernal</h2>
+                    <h4>Arco</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Un arco inmaculado y punzante como el gélido hielo del invierno.</p>
                 </div>
             </div>
         </div>
@@ -150,20 +156,86 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/alas celestiales.jpg" alt="">
+                        <img src="../assets/imagenes/espada de favonius 1.webp" alt="">
                     </a>
-                    <h2>Alas Celestiales</h2>
-                    <h4>Alas Celestiales</h4>
+                    <h2>Espada de Favonius</h2>
+                    <h4>Espada</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Una espada larga estándar de los Caballeros de Favonius. ¡Canalizar el poder de los elementos
+                        nunca fue tan fácil como con esta espada!</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/halcon de jade 1.webp" alt="">
+                    </a>
+                    <h2>Halcon de jade</h2>
+                    <h4>Lanza</h4>
+                </div>
+                <div class="historia">
+                    <p>Una pesada y afilada lanza de jade capaz de derrotar a los poderosos monstruos marinos de la
+                        antigüedad.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/axioma de la kagura 1.webp" alt="">
+                    </a>
+                    <h2>Axioma de la Kagura</h2>
+                    <h4>Catalizador</h4>
+                </div>
+                <div class="historia">
+                    <p>Una campana divina bendecida por la Suma Sacerdotisa y usada en las actuaciones dedanza kagura.
+                        De ella emana la fragancia del Cerezo Sagrado.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/Llave de la Coronación.jpg" alt="">
+                    </a>
+                    <h2>Llave de la coronacion</h2>
+                    <h4>Espada</h4>
+                </div>
+                <div class="historia">
+                    <p>Un cetro que venía junto a un báculo y que está hecho de obsidiana. Cuenta la leyenda que la
+                        puerta del paraíso oculto en los confines del desierto se abre con esta misteriosa llave.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-arma">
+                    <a href="#">
+                        <img src="../assets/imagenes/lapida del lobo 1.webp" alt="">
+                    </a>
+                    <h2>Lápida del Lobo</h2>
+                    <h4>Mandoble</h4>
+                </div>
+                <div class="historia">
+                    <p>Una gran espada que fue usada por el Lobo de los Caballeros de Favonius. Originariamente, era
+                        solo una pesada lámina de hierro que le regaló el herrero de la ciudad. Sin embargo, se
+                        convirtió en una gran espada al serle otorgado poderes legendarios por su amistad con los lobos.
+                    </p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!--TERMINAN LAS CARDS-->
 </body>
+
+<!--TERMINA el body-->
+<!--Inicia el FOOTER-->
 <footer>
     <div class="container-fluid-footer ">
         <div class="mt-3 ">
@@ -195,7 +267,6 @@
         </div>
     </div>
 </footer>
-
-</html>
+<!--TERMINA EL FOOTER-->
 
 </html>
