--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,23 +5,39 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Genshin Impact</title>
-  <link rel="stylesheet" href="../assets/css/estilos.css">
+  <title>Genshin Impact | Fan Page</title>
+  <meta name="description"
+    content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+  <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+  <meta property="og:type" content="Web site">
+  <meta property="og:title" content="Genshin Impact | Fan Page">
+  <meta property="og:description"
+    content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+
+  <!--CSS COMPILADO / SASS-->
+  <link rel="stylesheet" href="../assets/css/style.css">
+
+  <!--BOOTSTRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <!--FONT AWESOME-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+<!--Inicia el body-->
+
 <body>
   <header>
+    <!--Inicia el NAV-->
     <nav>
       <input type="checkbox" id="ckbox">
       <label for="ckbox" class="drawer">
         <i class="fa fa-bars" aria-hidden="true"></i>
       </label>
-      <h1>
-        Genshin Impact
-      </h1>
+
+      <!--LOGO-->
+      <a href="#"><img src="../assets/imagenes/logo.png"></a>
+
       <ul class="menu-box">
         <li><a href="../index.html">Home</a></li>
         <li><a href="personajes.html">Personajes</a></li>
@@ -52,41 +68,42 @@
     </p>
 
   </form>
-
+  <!--TERMINA EL FORMULARIO DE CONTACTO-->
 
 </body>
+<!--TERMINA el body-->
+<!--Inicia el FOOTER-->
 <footer>
   <div class="container-fluid-footer ">
-      <div class="mt-3 ">
-          <h3 class="text-center fw-bold">¿Quienes somos?</h3>
-          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit ,<br>
-              Quos facilis sunt, ipsa dolor aliquam accusamus sint facere repudiandae?</p>
-          <hr>
-      </div>
-
-      <div class="row justify-content-around text-center text-md-start">
-          <div class="col-md-2 text-center">
-              <h1 class="fw-bold mt-3 ">Genshin<br>Impact</h1>
-          </div>
-          <div class="col-md-2">
-              <ul class="list-unstyled">
-                  <li class="fw-bold my-2">¡Explora!</li>
-                  <li> <a href="eventos.html" class="text-decoration-none text-white">Eventos</a> </li>
-                  <li> <a href="contacto.html" class="text-decoration-none text-white">Ayuda</a> </li>
-                  <li> <a href="#" class="text-decoration-none text-white">Página Oficial</a> </li>
-
-              </ul>
-          </div>
-      </div>
+    <div class="mt-3 ">
+      <h3 class="text-center fw-bold">¿Quienes somos?</h3>
+      <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit ,<br>
+        Quos facilis sunt, ipsa dolor aliquam accusamus sint facere repudiandae?</p>
       <hr>
-      <div class="row-copy">
-          <div class="col-md-12 text-center pt-2">
-              <p>&copy; 2022 Copyright <a href="/index.html" class="text-white">Genshin Impact</a></p>
-          </div>
+    </div>
+
+    <div class="row justify-content-around text-center text-md-start">
+      <div class="col-md-2 text-center">
+        <h1 class="fw-bold mt-3 ">Genshin<br>Impact</h1>
       </div>
+      <div class="col-md-2">
+        <ul class="list-unstyled">
+          <li class="fw-bold my-2">¡Explora!</li>
+          <li> <a href="eventos.html" class="text-decoration-none text-white">Eventos</a> </li>
+          <li> <a href="contacto.html" class="text-decoration-none text-white">Ayuda</a> </li>
+          <li> <a href="#" class="text-decoration-none text-white">Página Oficial</a> </li>
+
+        </ul>
+      </div>
+    </div>
+    <hr>
+    <div class="row-copy">
+      <div class="col-md-12 text-center pt-2">
+        <p>&copy; 2022 Copyright <a href="/index.html" class="text-white">Genshin Impact</a></p>
+      </div>
+    </div>
   </div>
 </footer>
-
-</html>
+<!--TERMINA EL FOOTER-->
 
 </html>
