--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,23 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshin Impact</title>
-    <link rel="stylesheet" href="../assets/css/estilos.css">
+    <title>Genshin Impact | Fan Page</title>
+    <meta name="description" content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Genshin Impact | Fan Page">
+    <meta property="og:description" content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact."> 
+<!--css compilado / sass-->
+    <link rel="stylesheet" href="../assets/css/style.css">
+
+<!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+<!--Inicia el body-->
 <body>
     <header>
+        <!--Inicia el nav-->
         <nav>
           <input type="checkbox" id="ckbox">
           <label for="ckbox" class="drawer">
             <i class="fa fa-bars" aria-hidden="true"></i>
           </label>
-          <h1>
-            Genshin Impact
-          </h1>
+
+          <!--Logo-->
+          <a href="#"><img src="../assets/imagenes/logo.png"></a>
+
           <ul class="menu-box">
             <li><a href="../index.html">Home</a></li>
             <li><a href="personajes.html">Personajes</a></li>
@@ -32,51 +45,54 @@
         </nav>
       </header>
         
-
+<!--titulo galería-->
     <h1 class="gallery-gallery text-center">
         GALERÍA
     </h1>
 
+    <!--Inicia la galería-->
     <div class="gallery-container">
         <div class="gallery-item">
             <img src="../assets/imagenes/genshin_32_4K.jpg" alt="" class="gallery__img">
-            <h2 class="gallery-title">Imagen</h2>
+            <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
             <img src="../assets/imagenes/genshin_27_4K.jpg" alt="" class="gallery__img">
-            <h2 class="gallery-title">Imagen</h2>
+            <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
             <img src="../assets/imagenes/genshin_23_4K.jpg" alt="" class="gallery__img">
-            <h2 class="gallery-title">Imagen</h2>
+            <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
             <img src="../assets/imagenes/genshin-impact-2.1.jpg" alt="" class="gallery__img">
-            <h2 class="gallery-title">Imagen</h2>
+            <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
             <img src="../assets/imagenes/Noelle-Genshin Impact.jpg" alt="" class="gallery__img">
-            <h2 class="gallery-title">Imagen</h2>
+            <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
             <img src="../assets/imagenes/genshin_14_4K.jpg" alt="" class="gallery__img">
-            <h2 class="gallery-title">Imagen</h2>
+            <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
             <img src="../assets/imagenes/genshin_11_4K.jpg" alt="" class="gallery__img">
-            <h2 class="gallery-title">Imagen</h2>
+            <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
             <img src="../assets/imagenes/genshin_26_4K.jpg" alt="" class="gallery__img">
-            <h2 class="gallery-title">Imagen</h2>
+            <h2 class="gallery-title"></h2>
         </div>
         <div class="gallery-item">
             <img src="../assets/imagenes/genshin_20_4K.jpg" alt="" class="gallery__img">
-            <h2 class="gallery-title">Imagen</h2>
+            <h2 class="gallery-title"></h2>
         </div>
-
     </div>
+    <!--termina la galería-->
 </body>
+<!--Termina el body-->
+<!--Inicia el footer-->
 <footer>
     <div class="container-fluid-footer ">
         <div class="mt-3 ">
@@ -108,7 +124,5 @@
         </div>
     </div>
 </footer>
-
-</html>
-
+<!--Termina el footer-->
 </html>
