--- a/pages/materiales.html
+++ b/pages/materiales.html
@@ -5,23 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshin Impact</title>
-    <link rel="stylesheet" href="../assets/css/estilos.css">
+    <title>Genshin Impact | Fan Page</title>
+    <meta name="description"
+        content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Genshin Impact | Fan Page">
+    <meta property="og:description"
+        content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
+
+    <!--CSS COMPILADO / SASS-->
+    <link rel="stylesheet" href="../assets/css/style.css">
+
+    <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+<!--Inicia el body-->
 <body>
     <header>
+        <!--Inicia el nav-->
         <nav>
             <input type="checkbox" id="ckbox">
             <label for="ckbox" class="drawer">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </label>
-            <h1>
-                Genshin Impact
-            </h1>
+
+            <!--Logo-->
+            <a href="#"><img src="../assets/imagenes/logo.png"></a>
+            
             <ul class="menu-box">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
@@ -32,124 +47,189 @@
         </nav>
     </header>
 
-
+<!--Inician las cards-->
     <section>
         <div class="container-card">
             <div class="card-container">
-                <div class="card-arma">
+                <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                        <img src="../assets/imagenes/Margarita voladora.jpg" alt="">
                     </a>
-                    <h2>Núcleo de escarcha</h2>
-                    <h4>Núcleo de escarcha</h4>
+                    <h2>Margarita voladora</h2>
+                    <h4>Objeto típico de Mondstadt</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>La Margarita voladora es un material de ascensión típico de Mondstadt.</p>
                 </div>
             </div>
         </div>
         <div class="container-card">
             <div class="card-container">
-                <div class="card-arma">
+                <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                        <img src="../assets/imagenes/Semilla de huracán" alt="">
                     </a>
-                    <h2>Núcleo de escarcha</h2>
-                    <h4>Núcleo de escarcha</h4>
+                    <h2>Semilla de huracán</h2>
+                    <h4>Material de mejora de personaje</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Dejada por Hipostasis Anemo</p>
                 </div>
             </div>
         </div>
         <div class="container-card">
             <div class="card-container">
-                <div class="card-arma">
+                <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                        <img src="../assets/imagenes/Pilar de basalto" alt="">
                     </a>
-                    <h2>Núcleo de escarcha</h2>
-                    <h4>Núcleo de escarcha</h4>
+                    <h2>Pilar de basalto</h2>
+                    <h4>Material de mejora de personaje</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Dejado por Hipostasis Geo</p>
                 </div>
             </div>
         </div>
         <div class="container-card">
             <div class="card-container">
-                <div class="card-arma">
+                <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                        <img src="../assets/imagenes/Abalorio de la tempestad.jpg" alt="">
                     </a>
-                    <h2>Núcleo de escarcha</h2>
-                    <h4>Núcleo de escarcha</h4>
+                    <h2>Abalorio de la tempestad</h2>
+                    <h4>Material de mejora de personaje</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Obtenido al derrotar a la Manifestación del Trueno</p>
                 </div>
             </div>
         </div>
         <div class="container-card">
             <div class="card-container">
-                <div class="card-arma">
+                <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                        <img src="../assets/imagenes/trepadora supresora" alt="">
                     </a>
-                    <h2>Núcleo de escarcha</h2>
-                    <h4>Núcleo de escarcha</h4>
+                    <h2>Trepadora supresora</h2>
+                    <h4>Material de mejora de personaje</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>obtenido de la Hipostasis Dendro </p>
                 </div>
             </div>
         </div>
         <div class="container-card">
             <div class="card-container">
-                <div class="card-arma">
+                <div class="card-materiales">
                     <a href="#">
                         <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
                     </a>
                     <h2>Núcleo de escarcha</h2>
-                    <h4>Núcleo de escarcha</h4>
+                    <h4>Material de mejora de personaje</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Dejado por Regisvid Cryo</p>
                 </div>
             </div>
         </div>
         <div class="container-card">
             <div class="card-container">
-                <div class="card-arma">
+                <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                        <img src="../assets/imagenes/corazon purificador.jpg" alt="">
                     </a>
-                    <h2>Núcleo de escarcha</h2>
+                    <h2>Corazón purificador</h2>
+                    <h4>Material de mejora de personaje</h4>
+                </div>
+                <div class="historia">
+                    <p>Obtenido de Rhodeia</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-materiales">
+                    <a href="#">
+                        <img src="../assets/imagenes/Semilla de diente de león.webp" alt="">
+                    </a>
+                    <h2>Semilla de diente de león</h2>
                     <h4>Núcleo de escarcha</h4>
                 </div>
                 <div class="historia">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt ut perspiciatis excepturi
-                        temporibus quasi nisi quod necessitatibus facere. Neque tenetur porro maxime nulla optio
-                        aspernatur iste praesentium deleniti provident iure?</p>
+                    <p>Las Semillas de diente de león son un artículo de especialidad local que se puede cosechar de las
+                        plantas de diente de león. Las plantas de diente de león se encuentran dentro de la región de
+                        Mondstadt y, sobre todo, cerca de las puertas de entrada de Mondstadt. Las semillas de diente de
+                        león se dejan caer después de usar un ataque de Anemo en una planta de diente de león.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-materiales">
+                    <a href="#">
+                        <img src="../assets/imagenes/Jade inmaduro.jpg" alt="">
+                    </a>
+                    <h2>Jade inmaduro</h2>
+                    <h4>Material de mejora de personaje</h4>
+                </div>
+                <div class="historia">
+                    <p>Dejado por Protodragarto Geo</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-materiales">
+                    <a href="#">
+                        <img src="../assets/imagenes/Pseudoaleta de dragón de las profundidades.webp" alt="">
+                    </a>
+                    <h2>Pseudoaleta de dragón de las <br>
+                        profundidades</h2>
+                    <h4>Material de mejora de personaje</h4>
+                </div>
+                <div class="historia">
+                    <p>Como recompensa al reclamar después de derrotar al jefe normal de la Manada de Dragartos de las
+                        Profundidades.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-materiales">
+                    <a href="#">
+                        <img src="../assets/imagenes/Resorte perpetuo.webp" alt="">
+                    </a>
+                    <h2>Resorte perpetuo</h2>
+                    <h4>Material de mejora de personaje</h4>
+                </div>
+                <div class="historia">
+                    <p>Se obtiene al reclamar las recompensas por haber derrotado a cualquiera de los siguientes Jefes
+                        normales:
+                        Enemigo Dragón Aciagoeterno.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-card">
+            <div class="card-container">
+                <div class="card-materiales">
+                    <a href="#">
+                        <img src="../assets/imagenes/Semilla de fuego eterno" alt="">
+                    </a>
+                    <h2>Semilla de fuego eterno</h2>
+                    <h4>Material de mejora de personaje</h4>
+                </div>
+                <div class="historia">
+                    <p>Dejado por Regisvid Pyro</p>
                 </div>
             </div>
         </div>
 
     </section>
-
+<!--terminan las cards-->
 </body>
+<!--termina el body-->
+<!--Inicia el footer-->
 <footer>
     <div class="container-fluid-footer ">
         <div class="mt-3 ">
@@ -181,7 +261,5 @@
         </div>
     </div>
 </footer>
-
-</html>
-
+<!--termina el footer-->
 </html>
