--- a/pages/materiales.html
+++ b/pages/materiales.html
@@ -9,6 +9,8 @@
     <meta name="description"
         content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
     <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+    <meta name="author" content="Martín Chocho Sánchez">
+    <link rel="icon" href="../assets/imagenes/favicon.ico" type="image/x-icon" />
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Genshin Impact | Fan Page">
     <meta property="og:description"
