--- a/pages/armas.html
+++ b/pages/armas.html
@@ -8,7 +8,7 @@
     <title>Genshin Impact | Fan Page</title>
     <meta name="description"
         content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
-    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto, anime, rpg">
     <meta name="author" content="Martín Chocho Sánchez">
     <link rel="icon" href="../assets/imagenes/favicon.ico" type="image/x-icon" />
     <meta property="og:type" content="Web site">
@@ -36,13 +36,17 @@
             <label for="ckbox" class="drawer">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </label>
-            <a href="#"><img src="../assets/imagenes/logo.png"></a>
+
+            <!--Logo-->
+            <a href="/index.html"><img src="../assets/imagenes/logo.png"></a>
+            
             <ul class="menu-box">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
                 <li><a href="armas.html">Armas</a></li>
                 <li><a href="materiales.html">Materiales</a></li>
                 <li><a href="galeria.html">Gallery</a></li>
+                <li><a href="regiones.html">Regiones</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +57,7 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/deseo ponzoñoso 1.webp" alt="">
+                        <img src="../assets/imagenes/deseo ponzoñoso 1.webp" alt="Deseo Ponzoñoso">
                     </a>
                     <h2>Deseo Ponzoñoso</h2>
                     <h4>Espada</h4>
@@ -68,7 +72,7 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/alas celestiales 1.webp" alt="">
+                        <img src="../assets/imagenes/alas celestiales 1.webp" alt="Alas Celestiales">
                     </a>
                     <h2>Alas Celestiales</h2>
                     <h4>Arco</h4>
@@ -84,7 +88,7 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/lanza perforanubes 3.webp" alt="">
+                        <img src="../assets/imagenes/lanza perforanubes 3.webp" alt="Lanza perforanubes">
                     </a>
                     <h2>Lanza perforanubes</h2>
                     <h4>Lanza</h4>
@@ -99,7 +103,7 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/luz del cegador 1.webp" alt="">
+                        <img src="../assets/imagenes/luz del cegador 1.webp" alt="Luz del cegador">
                     </a>
                     <h2>Luz del cegador</h2>
                     <h4>Lanza</h4>
@@ -114,7 +118,7 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/mil sueños flotantes 1.jpg" alt="">
+                        <img src="../assets/imagenes/mil sueños flotantes 1.jpg" alt="Catalizador">
                     </a>
                     <h2>Mil sueños flotantes</h2>
                     <h4>Catalizador</h4>
@@ -129,7 +133,7 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/rugido del leon.webp" alt="">
+                        <img src="../assets/imagenes/rugido del leon.webp" alt="Rugido del leon">
                     </a>
                     <h2>Rugido del leon</h2>
                     <h4>Espada</h4>
@@ -144,7 +148,7 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/estrella invernal 1.webp" alt="">
+                        <img src="../assets/imagenes/estrella invernal 1.webp" alt="Estrella invernal">
                     </a>
                     <h2>Estrella invernal</h2>
                     <h4>Arco</h4>
@@ -158,7 +162,7 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/espada de favonius 1.webp" alt="">
+                        <img src="../assets/imagenes/espada de favonius 1.webp" alt="Espada de Favonius">
                     </a>
                     <h2>Espada de Favonius</h2>
                     <h4>Espada</h4>
@@ -173,9 +177,9 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/halcon de jade 1.webp" alt="">
+                        <img src="../assets/imagenes/halcon de jade 1.webp" alt="Halcón de jade">
                     </a>
-                    <h2>Halcon de jade</h2>
+                    <h2>Halcón de jade</h2>
                     <h4>Lanza</h4>
                 </div>
                 <div class="historia">
@@ -188,13 +192,13 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/axioma de la kagura 1.webp" alt="">
+                        <img src="../assets/imagenes/axioma de la kagura 1.webp" alt="Axioma de la Kagura">
                     </a>
                     <h2>Axioma de la Kagura</h2>
                     <h4>Catalizador</h4>
                 </div>
                 <div class="historia">
-                    <p>Una campana divina bendecida por la Suma Sacerdotisa y usada en las actuaciones dedanza kagura.
+                    <p>Una campana divina bendecida por la Suma Sacerdotisa y usada en las actuaciones de danza kagura.
                         De ella emana la fragancia del Cerezo Sagrado.</p>
                 </div>
             </div>
@@ -203,9 +207,9 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/Llave de la Coronación.jpg" alt="">
+                        <img src="../assets/imagenes/Llave de la Coronación.jpg" alt="Llave de la coronación">
                     </a>
-                    <h2>Llave de la coronacion</h2>
+                    <h2>Llave de la coronación</h2>
                     <h4>Espada</h4>
                 </div>
                 <div class="historia">
@@ -218,7 +222,7 @@
             <div class="card-container">
                 <div class="card-arma">
                     <a href="#">
-                        <img src="../assets/imagenes/lapida del lobo 1.webp" alt="">
+                        <img src="../assets/imagenes/lapida del lobo 1.webp" alt="Lápida del Lobo">
                     </a>
                     <h2>Lápida del Lobo</h2>
                     <h4>Mandoble</h4>
@@ -242,21 +246,22 @@
     <div class="container-fluid-footer ">
         <div class="mt-3 ">
             <h3 class="text-center fw-bold">¿Quienes somos?</h3>
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit ,<br>
-                Quos facilis sunt, ipsa dolor aliquam accusamus sint facere repudiandae?</p>
+            <p class="text-center">Somos una comunidad de fandom que reúne información sobre Genshin Impact ,<br>
+                ¡Descubre este maravilloso juego!</p>
             <hr>
         </div>
 
         <div class="row justify-content-around text-center text-md-start">
             <div class="col-md-2 text-center">
-                <h1 class="fw-bold mt-3 ">Genshin<br>Impact</h1>
+                <a href="/index.html"><img src="../assets/imagenes/logo.png" width="200" alt="Genshin Impact"></a>
             </div>
             <div class="col-md-2">
                 <ul class="list-unstyled">
                     <li class="fw-bold my-2">¡Explora!</li>
                     <li> <a href="eventos.html" class="text-decoration-none text-white">Eventos</a> </li>
                     <li> <a href="contacto.html" class="text-decoration-none text-white">Ayuda</a> </li>
-                    <li> <a href="#" class="text-decoration-none text-white">Página Oficial</a> </li>
+                    <li> <a href="/index.html" class="text-decoration-none text-white">Home</a> </li>
+                    <li> <a href="https://genshin.hoyoverse.com/es/home" class="text-decoration-none text-white">Página Oficial</a> </li>
 
                 </ul>
             </div>
