--- a/pages/materiales.html
+++ b/pages/materiales.html
@@ -8,7 +8,7 @@
     <title>Genshin Impact | Fan Page</title>
     <meta name="description"
         content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
-    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto, anime, rpg">
     <meta name="author" content="Martín Chocho Sánchez">
     <link rel="icon" href="../assets/imagenes/favicon.ico" type="image/x-icon" />
     <meta property="og:type" content="Web site">
@@ -37,14 +37,15 @@
             </label>
 
             <!--Logo-->
-            <a href="#"><img src="../assets/imagenes/logo.png"></a>
+            <a href="/index.html"><img src="../assets/imagenes/logo.png" alt="Genshin Impact"></a>
             
             <ul class="menu-box">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
                 <li><a href="armas.html">Armas</a></li>
                 <li><a href="materiales.html">Materiales</a></li>
                 <li><a href="galeria.html">Gallery</a></li>
+                <li><a href="regiones.html">Regiones</a></li>
             </ul>
         </nav>
     </header>
@@ -55,7 +56,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Margarita voladora.jpg" alt="">
+                        <img src="../assets/imagenes/Margarita voladora.jpg" alt="Margarita voladora">
                     </a>
                     <h2>Margarita voladora</h2>
                     <h4>Objeto típico de Mondstadt</h4>
@@ -69,7 +70,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Semilla de huracán" alt="">
+                        <img src="../assets/imagenes/Semilla de huracán" alt="Semilla de huracán">
                     </a>
                     <h2>Semilla de huracán</h2>
                     <h4>Material de mejora de personaje</h4>
@@ -83,7 +84,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Pilar de basalto" alt="">
+                        <img src="../assets/imagenes/Pilar de basalto" alt="Pilar de basalto">
                     </a>
                     <h2>Pilar de basalto</h2>
                     <h4>Material de mejora de personaje</h4>
@@ -97,7 +98,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Abalorio de la tempestad.jpg" alt="">
+                        <img src="../assets/imagenes/Abalorio de la tempestad.jpg" alt="Abalorio de la tempestad">
                     </a>
                     <h2>Abalorio de la tempestad</h2>
                     <h4>Material de mejora de personaje</h4>
@@ -111,7 +112,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/trepadora supresora" alt="">
+                        <img src="../assets/imagenes/trepadora supresora" alt="Trepadora supresora">
                     </a>
                     <h2>Trepadora supresora</h2>
                     <h4>Material de mejora de personaje</h4>
@@ -125,7 +126,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="">
+                        <img src="../assets/imagenes/Núcleo de escarcha.jpg" alt="Núcleo de escarcha">
                     </a>
                     <h2>Núcleo de escarcha</h2>
                     <h4>Material de mejora de personaje</h4>
@@ -139,7 +140,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/corazon purificador.jpg" alt="">
+                        <img src="../assets/imagenes/corazon purificador.jpg" alt="Corazón purificador">
                     </a>
                     <h2>Corazón purificador</h2>
                     <h4>Material de mejora de personaje</h4>
@@ -153,7 +154,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Semilla de diente de león.webp" alt="">
+                        <img src="../assets/imagenes/Semilla de diente de león.webp" alt="Semilla de diente de león">
                     </a>
                     <h2>Semilla de diente de león</h2>
                     <h4>Núcleo de escarcha</h4>
@@ -170,7 +171,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Jade inmaduro.jpg" alt="">
+                        <img src="../assets/imagenes/Jade inmaduro.jpg" alt="Jade inmaduro">
                     </a>
                     <h2>Jade inmaduro</h2>
                     <h4>Material de mejora de personaje</h4>
@@ -184,7 +185,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Pseudoaleta de dragón de las profundidades.webp" alt="">
+                        <img src="../assets/imagenes/Pseudoaleta de dragón de las profundidades.webp" alt="Pseudoaleta de dragón de las profundidades">
                     </a>
                     <h2>Pseudoaleta de dragón de las <br>
                         profundidades</h2>
@@ -200,7 +201,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Resorte perpetuo.webp" alt="">
+                        <img src="../assets/imagenes/Resorte perpetuo.webp" alt="Resorte perpetuo">
                     </a>
                     <h2>Resorte perpetuo</h2>
                     <h4>Material de mejora de personaje</h4>
@@ -216,7 +217,7 @@
             <div class="card-container">
                 <div class="card-materiales">
                     <a href="#">
-                        <img src="../assets/imagenes/Semilla de fuego eterno" alt="">
+                        <img src="../assets/imagenes/Semilla de fuego eterno" alt="Semilla de fuego eterno">
                     </a>
                     <h2>Semilla de fuego eterno</h2>
                     <h4>Material de mejora de personaje</h4>
@@ -228,29 +229,32 @@
         </div>
 
     </section>
-<!--terminan las cards-->
+<!--Terminan las cards-->
+
 </body>
-<!--termina el body-->
+<!--Termina el body-->
+
 <!--Inicia el footer-->
 <footer>
     <div class="container-fluid-footer ">
         <div class="mt-3 ">
             <h3 class="text-center fw-bold">¿Quienes somos?</h3>
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit ,<br>
-                Quos facilis sunt, ipsa dolor aliquam accusamus sint facere repudiandae?</p>
+            <p class="text-center">Somos una comunidad de fandom que reúne información sobre Genshin Impact ,<br>
+                ¡Descubre este maravilloso juego!</p>
             <hr>
         </div>
 
         <div class="row justify-content-around text-center text-md-start">
             <div class="col-md-2 text-center">
-                <h1 class="fw-bold mt-3 ">Genshin<br>Impact</h1>
+                <a href="/index.html"><img src="../assets/imagenes/logo.png" width="200" alt="Genshin Impact"></a>
             </div>
             <div class="col-md-2">
                 <ul class="list-unstyled">
                     <li class="fw-bold my-2">¡Explora!</li>
                     <li> <a href="eventos.html" class="text-decoration-none text-white">Eventos</a> </li>
                     <li> <a href="contacto.html" class="text-decoration-none text-white">Ayuda</a> </li>
-                    <li> <a href="#" class="text-decoration-none text-white">Página Oficial</a> </li>
+                    <li> <a href="/index.html" class="text-decoration-none text-white">Home</a> </li>
+                    <li> <a href="https://genshin.hoyoverse.com/es/home" class="text-decoration-none text-white">Página Oficial</a> </li>
 
                 </ul>
             </div>
