--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Genshin Impact | Fan Page</title>
   <meta name="description" content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
-  <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+  <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto, anime, rpg">
   <meta name="author" content="Martín Chocho Sánchez">
     <link rel="icon" href="assets/imagenes/favicon.ico" type="image/x-icon" />
   <meta property="og:type" content="Web site">
@@ -35,7 +35,7 @@
         <i class="fa fa-bars" aria-hidden="true"></i>
       </label>
 
-      <a href="#"><img src="./assets/imagenes/logo.png"></a>
+      <a href="index.html"><img src="./assets/imagenes/logo.png" alt="Genshin Impact"></a>
       
       <ul class="menu-box">
         <li><a href="index.html">Home</a></li>
@@ -43,6 +43,7 @@
         <li><a href="pages/armas.html">Armas</a></li>
         <li><a href="pages/materiales.html">Materiales</a></li>
         <li><a href="pages/galeria.html">Gallery</a></li>
+        <li><a href="pages/regiones.html">Regiones</a></li>
       </ul>
     </nav>
   </header>
@@ -87,21 +88,22 @@
   <div class="container-fluid-footer ">
       <div class="mt-3 ">
           <h3 class="text-center fw-bold">¿Quienes somos?</h3>
-          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit ,<br>
-              Quos facilis sunt, ipsa dolor aliquam accusamus sint facere repudiandae?</p>
+          <p class="text-center">Somos una comunidad de fandom que reúne información sobre Genshin Impact ,<br>
+              ¡Descubre este maravilloso juego!</p>
           <hr>
       </div>
 
       <div class="row justify-content-around text-center text-md-start">
           <div class="col-md-2 text-center">
-              <h1 class="fw-bold mt-3 ">Genshin<br>Impact</h1>
+            <a href="index.html"><img src="./assets/imagenes/logo.png" width="200" alt="Genshin Impact"></a>
           </div>
           <div class="col-md-2">
               <ul class="list-unstyled">
                   <li class="fw-bold my-2">¡Explora!</li>
                   <li> <a href="pages/eventos.html" class="text-decoration-none text-white">Próximos Eventos</a> </li>
                   <li> <a href="pages/contacto.html" class="text-decoration-none text-white">Contáctanos</a> </li>
-                  <li> <a href="#" class="text-decoration-none text-white">Página Oficial</a> </li>
+                  <li> <a href="index.html" class="text-decoration-none text-white">Home</a> </li>
+                  <li> <a href="https://genshin.hoyoverse.com/es/home" class="text-decoration-none text-white">Página Oficial</a> </li>
               </ul>
           </div>
       </div>
