--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genshin Impact | Fan Page</title>
     <meta name="description" content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
-    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto, anime, rpg">
     <meta name="author" content="Martín Chocho Sánchez">
     <link rel="icon" href="../assets/imagenes/favicon.ico" type="image/x-icon" />
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Genshin Impact | Fan Page">
     <meta property="og:description" content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact."> 
-<!--css compilado / sass-->
+<!--Css compilado / Sass-->
     <link rel="stylesheet" href="../assets/css/style.css">
 
 <!--Bootstrap-->
@@ -35,14 +35,15 @@
           </label>
 
           <!--Logo-->
-          <a href="#"><img src="../assets/imagenes/logo.png"></a>
+          <a href="/index.html"><img src="../assets/imagenes/logo.png" alt="Genshin Impact"></a>
 
           <ul class="menu-box">
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="personajes.html">Personajes</a></li>
             <li><a href="armas.html">Armas</a></li>
             <li><a href="materiales.html">Materiales</a></li>
             <li><a href="galeria.html">Gallery</a></li>
+            <li><a href="regiones.html">Regiones</a></li>
           </ul>
         </nav>
       </header>
@@ -99,21 +100,22 @@
     <div class="container-fluid-footer ">
         <div class="mt-3 ">
             <h3 class="text-center fw-bold">¿Quienes somos?</h3>
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit ,<br>
-                Quos facilis sunt, ipsa dolor aliquam accusamus sint facere repudiandae?</p>
+            <p class="text-center">Somos una comunidad de fandom que reúne información sobre Genshin Impact ,<br>
+                ¡Descubre este maravilloso juego!</p>
             <hr>
         </div>
 
         <div class="row justify-content-around text-center text-md-start">
             <div class="col-md-2 text-center">
-                <h1 class="fw-bold mt-3 ">Genshin<br>Impact</h1>
+                <a href="/index.html"><img src="../assets/imagenes/logo.png" width="200" alt="Genshin Impact"></a>
             </div>
             <div class="col-md-2">
                 <ul class="list-unstyled">
                     <li class="fw-bold my-2">¡Explora!</li>
                     <li> <a href="eventos.html" class="text-decoration-none text-white">Eventos</a> </li>
                     <li> <a href="contacto.html" class="text-decoration-none text-white">Ayuda</a> </li>
-                    <li> <a href="#" class="text-decoration-none text-white">Página Oficial</a> </li>
+                    <li> <a href="/index.html" class="text-decoration-none text-white">Home</a> </li>
+                    <li> <a href="https://genshin.hoyoverse.com/es/home" class="text-decoration-none text-white">Página Oficial</a> </li>
 
                 </ul>
             </div>
