--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -8,7 +8,7 @@
     <title>Genshin Impact | Fan Page</title>
     <meta name="description"
         content="Genshin Impact es una fan page donde podrán encontrar información, detalles y novedades sobre el juego Genshin Impact.">
-    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto">
+    <meta name="keywords" content="juego, genshin, impact, genshin impact, videojuego, mundo abierto, anime, rpg">
     <meta name="author" content="Martín Chocho Sánchez">
     <link rel="icon" href="../assets/imagenes/favicon.ico" type="image/x-icon" />
     <meta property="og:type" content="Web site">
@@ -39,14 +39,15 @@
             </label>
 
             <!--Logo-->
-            <a href="#"><img src="../assets/imagenes/logo.png"></a>
+            <a href="/index.html"><img src="../assets/imagenes/logo.png" alt="Genshin Impact"></a>
 
             <ul class="menu-box">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
                 <li><a href="armas.html">Armas</a></li>
                 <li><a href="materiales.html">Materiales</a></li>
                 <li><a href="galeria.html">Gallery</a></li>
+                <li><a href="regiones.html">Regiones</a></li>
             </ul>
         </nav>
     </header>
@@ -57,7 +58,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/aether y lumine.jpg" alt="">
+                        <img src="../assets/imagenes/aether y lumine.jpg" alt="Aether y Lumine">
                     </a>
                     <h2>Aether y Lumine</h2>
                     <h4>Viajeros</h4>
@@ -75,7 +76,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/venti.jpg" alt="">
+                        <img src="../assets/imagenes/venti.jpg" alt="Venti">
                     </a>
                     <h2>Venti</h2>
                     <h4>Arconte Anemo</h4>
@@ -90,7 +91,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/zhongli.webp" alt="">
+                        <img src="../assets/imagenes/zhongli.webp" alt="Zhongli">
                     </a>
                     <h2>Zhongli</h2>
                     <h4>Arconte Geo</h4>
@@ -107,7 +108,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/shogun raiden.jpg" alt="">
+                        <img src="../assets/imagenes/shogun raiden.jpg" alt="Shogun raiden">
                     </a>
                     <h2>Shogun raiden</h2>
                     <h4>Soberana del reino eterno</h4>
@@ -125,7 +126,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/nahida.jpg" alt="">
+                        <img src="../assets/imagenes/nahida.jpg" alt="Nahida">
                     </a>
                     <h2>Nahida</h2>
                     <h4>Reina Menor Kusanali</h4>
@@ -141,7 +142,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/kaeya.jpg" alt="">
+                        <img src="../assets/imagenes/kaeya.jpg" alt="Kaeya">
                     </a>
                     <h2>Kaeya</h2>
                     <h4>Capitán de Caballería</h4>
@@ -158,7 +159,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/dainsleif.jpg" alt="">
+                        <img src="../assets/imagenes/dainsleif.jpg" alt="Dainsleif">
                     </a>
                     <h2>Dainsleif</h2>
                     <h4>Espadachín del Crepúsculo</h4>
@@ -174,7 +175,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/tartaglia" alt="">
+                        <img src="../assets/imagenes/tartaglia" alt="Tartaglia">
                     </a>
                     <h2>Tartaglia</h2>
                     <h4>El Undécimo Heraldo de los Fatui</h4>
@@ -190,7 +191,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/teucer" alt="">
+                        <img src="../assets/imagenes/teucer" alt="Teucer">
                     </a>
                     <h2>Teucer</h2>
                     <h4>hermano menor de tartaglia</h4>
@@ -206,7 +207,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/jean.jpg" alt="">
+                        <img src="../assets/imagenes/jean.jpg" alt="Jean">
                     </a>
                     <h2>Jean</h2>
                     <h4>Caballeros de Favonius</h4>
@@ -223,7 +224,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/xiao" alt="">
+                        <img src="../assets/imagenes/xiao" alt="Xiao">
                     </a>
                     <h2>Xiao</h2>
                     <h4>El Guardián Yaksha</h4>
@@ -240,7 +241,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/yae miko" alt="">
+                        <img src="../assets/imagenes/yae miko" alt="Yae miko">
                     </a>
                     <h2>Yae miko</h2>
                     <h4>Suma Sacerdotisa</h4>
@@ -255,7 +256,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/nilou.jpg" alt="">
+                        <img src="../assets/imagenes/nilou.jpg" alt="Nilou">
                     </a>
                     <h2>Nilou</h2>
                     <h4>Estrella del Teatro Zubayr</h4>
@@ -270,7 +271,7 @@
             <div class="card-container">
                 <div class="card-personaje">
                     <a href="#">
-                        <img src="../assets/imagenes/diluc.jpg" alt="">
+                        <img src="../assets/imagenes/diluc.jpg" alt="Diluc">
                     </a>
                     <h2>Diluc</h2>
                     <h4>El Amanecer Oscuro</h4>
@@ -296,21 +297,22 @@
     <div class="container-fluid-footer ">
         <div class="mt-3 ">
             <h3 class="text-center fw-bold">¿Quienes somos?</h3>
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit ,<br>
-                Quos facilis sunt, ipsa dolor aliquam accusamus sint facere repudiandae?</p>
+            <p class="text-center">Somos una comunidad de fandom que reúne información sobre Genshin Impact ,<br>
+                ¡Descubre este maravilloso juego!</p>
             <hr>
         </div>
 
         <div class="row justify-content-around text-center text-md-start">
             <div class="col-md-2 text-center">
-                <h1 class="fw-bold mt-3 ">Genshin<br>Impact</h1>
+                <a href="/index.html"><img src="../assets/imagenes/logo.png" width="200" alt="Genshin Impact"></a>
             </div>
             <div class="col-md-2">
                 <ul class="list-unstyled">
                     <li class="fw-bold my-2">¡Explora!</li>
                     <li> <a href="eventos.html" class="text-decoration-none text-white">Eventos</a> </li>
                     <li> <a href="contacto.html" class="text-decoration-none text-white">Ayuda</a> </li>
-                    <li> <a href="#" class="text-decoration-none text-white">Página Oficial</a> </li>
+                    <li> <a href="/index.html" class="text-decoration-none text-white">Home</a> </li>
+                    <li> <a href="https://genshin.hoyoverse.com/es/home" class="text-decoration-none text-white">Página Oficial</a> </li>
 
                 </ul>
             </div>
